--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ header{
     padding: 15px;
 }
 
-.size-navbar{
+.size{
     max-width: 1100px;
     margin: auto;
     transition: 500ms;
@@ -51,12 +51,12 @@ header{
     flex-direction: row;
     justify-content: space-between;
     margin: 0 auto;
-    margin-top: 50px;
 }
 .container-title{
     font-family: 'Oswald';
     color: #314163;
     width: 450px;
+    margin-top: 50px;
 }
 .container-title a{
     font-size: 22px;
@@ -81,17 +81,15 @@ header{
     margin: 10px 0 0 0;
 }
 .container-card {
-    height: 1590px;
+    height: 1543px;
     width: 250px;
     background-color: #314168;
-    margin-top: 90px;
+    margin-top: 127px;
 }
 #imagem{
     position: absolute;
-    /* left: 500px; */
     left: 60%;
     margin-top: 450px;
-    
 }
 .container-form{
     width: 450px;
@@ -112,4 +110,17 @@ header{
     font-family: 'Oswald';
     font-size: 26px;
     color: #314163;
+}
+footer{
+    margin-top: 8rem;
+    background-color: #0079C1;
+    padding: 15px;
+}
+
+footer div p{
+    float: right;
+    color: white;
+    font-size: 11px;
+    margin-top: 4px;
+    font-family: 'Oswald', sans-serif;
 }
