--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ header {
     display: flex;
     width: 100%;
     position: relative;
-    max-width: 850px;
+    max-width: 950px;
     flex-flow: row wrap;
     justify-content: space-between;
     margin: 0 auto;
@@ -112,23 +112,22 @@ header {
 }
 
 .container-card {
-    height: 1658px;
-    width: 250px;
+    height: 1590px;
+    width: 290px;
     background-color: #314168;
     margin-top: 127px;
 }
 
 #imagem {
     position: absolute;
-    left: 60%;
-    margin-top: 450px;
+    left: 59%;
+    margin-top: 400px;
 }
 
 .container-form {
     width: 100%;
-    max-width: 450px;
-    /* flex: 1; */
-    height: 880px;
+    max-width: 490px;
+    height: 827px;
     background-color: #e3f4fe;
     margin-top: 30px;
     padding: 15px;
@@ -136,7 +135,7 @@ header {
 
 .container-form form {
     width: 100%;
-    height: 795px;
+    height: 732px;
     border: 2px solid black;
 }
 
@@ -144,7 +143,7 @@ header {
     font-family: "Oswald", sans-serif;
     font-size: 26px;
     color: #314163;
-    margin: 20px 0 0;
+    margin: 20px 0 10px;
     margin-left: 15px;
 }
 
@@ -152,7 +151,7 @@ header {
     font-family: "Oswald", sans-serif;
     font-size: 22px;
     color: #314163;
-    margin: 20px 0 0;
+    margin: 10px 0 0;
 }
 
 .campo {
@@ -163,7 +162,7 @@ header {
 }
 
 .campo input {
-    width: 408px;
+    width: 422px;
     height: 33px;
     margin-top: 10px;
     border: 2px solid #314163;
@@ -189,7 +188,7 @@ header {
 }
 
 .campo-right input {
-    width: 210px;
+    width: 234px;
     height: 33px;
     margin-top: 10px;
     border: 2px solid #314163;
@@ -359,12 +358,14 @@ footer div p {
     .campo-right {
         margin-left: 15px;
         float: none;
-
     }
 
     .container-form {
         width: 90%;
         height: 1100px;
+    }
+    #envio{
+        margin-top: 90px;
     }
 
 }
